--- a/go/minibattles.html
+++ b/go/minibattles.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/g-switch-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/g-switch-3.png">
+                            <img src="https://sudoku-online.github.io/img/g-switch-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cookie-clicker.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cookie-clicker.png">
+                            <img src="https://sudoku-online.github.io/img/cookie-clicker.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/top-speed-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/top-speed-3d.png">
+                            <img src="https://sudoku-online.github.io/img/top-speed-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/basketball-line.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/basketball-line.png">
+                            <img src="https://sudoku-online.github.io/img/basketball-line.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/battle-wheels.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/battle-wheels.png">
+                            <img src="https://sudoku-online.github.io/img/battle-wheels.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-champions-league.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-champions-league.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-champions-league.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/duck-life-3-evolution.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
+                            <img src="https://sudoku-online.github.io/img/duck-life-3-evolution.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/getaway-shootout.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/getaway-shootout.png">
+                            <img src="https://sudoku-online.github.io/img/getaway-shootout.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/kart-race-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/kart-race-3d.png">
+                            <img src="https://sudoku-online.github.io/img/kart-race-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/swingo.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/swingo.png">
+                            <img src="https://sudoku-online.github.io/img/swingo.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cubito-mayhem.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cubito-mayhem.png">
+                            <img src="https://sudoku-online.github.io/img/cubito-mayhem.png">
                             <div class="product-badge">       
                             </div>
                         </div>
